commentaires dans le code et sur swagger
